Fix fonts for phone readability

--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,12 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f4f7f6;
-  font-family: 'Roboto', sans-serif;
   line-height: 1.6;
   max-width: 100vw;
   max-height: 100vh;
   overflow-x: hidden;
   overflow-y: hidden;
-  font-family: 'Give You Glory', cursive;
+  font-family: 'Give You Glory', 'roboto', sans-serif;
   color: var(--quaternary-color);
   background-color: var(--primary-color);
 }
@@ -101,8 +100,7 @@ body {
   cursor: pointer;
   transition: background-color 0.3s, border-color 0.3s;
   z-index: 10;
-  font: bold;
-  font-family: 'Give You Glory', cursive;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .app-home-link {
@@ -110,7 +108,8 @@ body {
   width: 10vw;
 }
 
-.app-link-button:hover, .app-link-button2:hover {
+.app-link-button:hover,
+.app-link-button2:hover {
   background-color: var(--primary-color);
 }
 
